Update title in index.html to include '角形'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>3D ストリングアート（正 N/M）</title>
+  <title>3D ストリングアート（正 N/M角形）</title>
 
   <style>
     :root{
