--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       color: var(--hudFg);
       padding:24px 30px;
       border-radius:14px;
-      font-size:40px;     /* 少し大きめ */
+      font-size:40px;     
       font-weight:600;
       letter-spacing:0.03em;
       pointer-events:none;
@@ -281,12 +281,12 @@
 <body>
 <div class="wrap">
   <div class="panel">
-    <h1>3D ストリングアート（正 N/M）</h1>
+    <h1>3D ストリングアート（正 N/M角形）</h1>
 
     <div class="controlsTop">
       <button id="addRow" class="btnPrimary">＋ 追加</button>
       <button id="resetAll" class="btnWarn">リセット</button>
-      <button id="toggleAll" class="btnToggle">▶ 全アニメ再生</button>
+      <button id="toggleAll" class="btnToggle">▶ 全再生</button>
       <button id="openGlobal" class="btnWarn">設定</button>
       <button id="saveAll">PNG保存</button>
     </div>
@@ -379,7 +379,7 @@
       </div>
 
       <div class="modalRow">
-        <div class="left">円ガイドの色</div>
+        <div class="left">円の枠の色</div>
         <div class="right">
           <input type="color" id="optCircleColor">
         </div>
