--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
     <div class="controlsTop">
       <button id="addRow" class="btnPrimary">＋ 追加</button>
       <button id="resetAll" class="btnWarn">リセット</button>
-      <button id="toggleAll" class="btnToggle">▶ 全再生</button>
+      <button id="toggleAll" class="btnToggle">▶ 全アニメ再生</button>
       <button id="openGlobal" class="btnWarn">設定</button>
-      <button id="saveAll">PNG保存</button>
+      <button id="saveAll">📷PNG保存</button>
     </div>
 
     <div class="rows" id="rows"></div>
