--- a/index.html
+++ b/index.html
@@ -624,6 +624,42 @@ class ThreeScene{
       maxPitch:  1.45
     };
 
+    captureWithHUD(hudText){
+  const canvas = this.renderer.domElement;
+  const ctx = canvas.getContext("2d");
+
+  // まず Three.js の描画結果を確定
+  this.render();
+
+  if (hudText){
+    const pad = 20;
+    const fontSize = 40;
+    ctx.save();
+    ctx.font = `600 ${fontSize}px system-ui, -apple-system, "Segoe UI", sans-serif`;
+    ctx.textBaseline = "top";
+
+    const metrics = ctx.measureText(hudText);
+    const w = metrics.width + pad*2;
+    const h = fontSize + pad*2;
+
+    // 背景
+    ctx.fillStyle = "rgba(0,0,0,0.55)";
+    ctx.fillRect(12, 12, w, h);
+
+    // 枠線
+    ctx.strokeStyle = "rgba(255,255,255,0.25)";
+    ctx.strokeRect(12, 12, w, h);
+
+    // テキスト
+    ctx.fillStyle = "rgba(255,255,255,0.95)";
+    ctx.fillText(hudText, 12 + pad, 12 + pad);
+
+    ctx.restore();
+  }
+
+  return canvas.toDataURL("image/png");
+}
+
     this._installCameraControls();
   }
 
@@ -1636,7 +1672,12 @@ class StringArt3DApp{
       }
       this.requestRender();
 
-      const url = this.three.renderer.domElement.toDataURL('image/png');
+      const hudText = (this.hud.style.display === 'block')
+       ? this.hudNM.textContent
+         : null;
+
+          const url = this.three.captureWithHUD(hudText);
+
       const a = document.createElement('a');
       a.href = url;
       a.download = '3d-string-art.png';
